<resources>
    <string name="app_name">Katalog Film</string>
    <string name="search">Search</string>
    <string name="catalog_film">Catalog Film</string>
    <string name="username">USERNAME</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="repassword">Re-Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="tanggal_rilis">Rilis : </string>
    <string name="vote">Vote : </string>
    <string name="rating">Rating : </string>
    <string name="register">REGISTER</string>
</resources>